@@ -1,6 +1,7 @@
 Alpha 5
 
 - Hard-coded "Item groups" have been entirely replaced by moddable "Stockpile groups" which determine how stockpiles and the resources management screens work
+- Stockpiles now support filtering by stockpile group, item type and item material, and can also have a priority set
 - Twitch integration - twitch streamers can connect their account to have their viewers automatically show up in game!
 - You can now rename settlers!
 - Floors now overlap underneath walls, so the transparency at the edge of wall tiles makes sense rather than showing a grey border
